[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/gun.png" type="Texture" id=1]
[ext_resource path="res://src/Entities/Player/Gun/Gun.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 8 )

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -1.19209e-07 )
monitoring = false
monitorable = false

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 0, -5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -2, 2 )

[node name="GunPosition" type="Position2D" parent="Area2D"]
position = Vector2( 29, 1.19209e-07 )

[node name="GunPosition2" type="Position2D" parent="Area2D"]
position = Vector2( 72, 1.19209e-07 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
